new updates from ramu

--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
@@ -36,7 +36,7 @@
 
                         <div id="advanceseach" style="background-color: #ffffff; padding: 10px;" data-bind="visible:visibleAdvanceSearch">
                             <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
-                                <span style="font-style:bold">Advance Search</span>
+                                <span style="font-style:bold">Advanced Search</span>
                             </div>
 
                             <div class="oj-flex" style="background-color: #ffffff; height: auto">
