--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
@@ -1,46 +1,39 @@
 <!--Linked to people.js through modules and template bindings-->
 
 
-<style>
-    .headerPeople span{
-        display:inline-block;
-        margin-top: 8px;
-    }
-</style>
-
-
 <div class="oj-flex">
     <div class="oj-flex-item searchWrapper">
 
         <form data-bind="submit: filteredAllPeople" id="peopleSearchForm" class="searchInputFields">
             <div class="oj-flex" >
-                <div class="oj-flex-item" style="background-color: #ffffff; padding: 15px; ">
-                    <div class="oj-flex-item" style="background-color: #ffffff;  width: 98%; border: 3px solid #000000">
+                <div class="oj-flex-item">
+                    <div class="oj-flex-item searchFieldWrap">
 
-                        <div class="oj-flex-item" style="background-color: #e1e7ee; padding: 10px; ">
+                        <div class="oj-flex-item searchTitleBar">
                             <label >Search</label>
                         </div>
-                        <div id="simplesearch" style="background-color: #ffffff; padding: 10px;" data-bind="visible:visibleAdvanceSearch()===false">
-                            <input class="oj-flex-item" style="background-color: #ffffff;  border: 1px solid #000000"
+                        <div id="simplesearch" class="simplesearchWrap" data-bind="visible:visibleAdvanceSearch()===false">
+                            <input class="oj-flex-item inputField"
                                    placeholder="Search for active names, stores, jobs" 
-                                   id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText',rootAttributes: {
-                                            style:'max-width:45em'}}"/>
-                            <input class="oj-flex-item oj-button-primary" id="submit" type="submit" 
-                                   data-bind="ojComponent: {component: 'ojButton', 
-                            label: 'Search', icons: { start: 'fa fa-search'} }" />
-                            <input class="oj-flex-item" id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />
-                            <button class="oj-flex-item" id="hidesimple" style="float:right;" 
-                                   data-bind="click: hideSimpleSearch, ojComponent: {component: 'ojButton', label: 'Advance Search'}" />
+                                   id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText', rootAttributes:{class:'inputFieldWrap'}}"/>
+                            <div class="searchBtnWrap">
+                                <input class="oj-flex-item oj-button-primary" id="submit" type="submit"
+                                       data-bind="ojComponent: {component: 'ojButton',
+                                label: 'Search', icons: { start: 'fa fa-search'} }" />
+                                <input class="oj-flex-item" id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />
+                                <button class="oj-flex-item" id="hidesimple"
+                                       data-bind="click: hideSimpleSearch, ojComponent: {component: 'ojButton', label: 'Advance Search'}" />
+                            </div>
 
                         </div>
 
                         <div id="advanceseach" style="background-color: #ffffff; padding: 10px;" data-bind="visible:visibleAdvanceSearch">
                             <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
-                                <span style="font-style:bold">Advanced Search</span>
+                                <span class="advSearchLabel">Advanced Search</span>
                             </div>
 
                             <div class="oj-flex" style="background-color: #ffffff; height: auto">
-                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-lg-2 oj-md-2 oj-flex-item advSearchCol">
                                     <label for="firstname">FIRST NAME</label>
                                     <input id="firstname" data-bind="value: advFirstNameSearch, ojComponent: {component: 'ojInputText'}"/>
 
@@ -49,7 +42,7 @@
 
                                 </div>
 
-                                <div class="oj-lg-2 oj-md-3 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-lg-2 oj-md-3 oj-flex-item advSearchCol">
                                     <label for="homestore">HOME STORE ASSIGNMENT</label>
                                     <input placeholder="" id="homestore" data-bind="value: homeStoreSearch, ojComponent: {component: 'ojInputText'}"/>
 
@@ -58,7 +51,7 @@
 
                                 </div>
 
-                                <div class="oj-lg-3 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-lg-3 oj-md-2 oj-flex-item advSearchCol">
                                     <label for="job">JOB</label>
                                     <input placeholder="" id="job" data-bind="value: jobSearch, ojComponent: {component: 'ojInputText'}"/>
 
@@ -67,7 +60,7 @@
 
                                 </div>
 
-                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-lg-2 oj-md-2 oj-flex-item advSearchCol">
                                     <label for="status">STATUS</label>
                                     <div>
                                         <div id="statuscheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
@@ -93,7 +86,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-lg-2 oj-md-2 oj-flex-item advSearchCol">
                                     <label for="status">MORE OPTIONS</label>
                                     <div>
                                         <div id="morecheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
@@ -186,16 +179,16 @@
     <div class="oj-md-12 oj-flex-item">
         <div class="resultWrapper headerPeople">
 
-            <div class="oj-flex" style="background-color: #000000; height: 38px">
+            <div class="oj-flex tableHeader">
                 <div class="oj-lg-1 oj-md-1 oj-flex-item">
-                    <span style="color : #ffffff"></span>
+                    <span></span>
                 </div>
 
                 <div class="oj-lg-3 oj-md-3 oj-flex-item">
-                    <span style="color : #ffffff">Name</span>
+                    <span>Name</span>
                 </div>
                 <div class="oj-lg-3 oj-md-3 oj-flex-item">
-                    <span style="color : #ffffff">Primary ID</span>
+                    <span>Primary ID</span>
                     <span>
                         <a class="oj-component-icon oj-table-column-header-asc-icon oj-clickable-icon-nocontext"
                            style="display: inline-block;left:initial !important;"></a>
@@ -208,14 +201,14 @@
                 </div>
 
                 <div class="oj-lg-2 oj-md-2 oj-flex-item">
-                    <span style="color : #ffffff">Home Store</span>
+                    <span>Home Store</span>
                 </div>
 
                 <div class="oj-lg-1 oj-md-1 oj-flex-item">
-                    <span style="color : #ffffff">Hire Data</span>
+                    <span>Hire Data</span>
                 </div>
                 <div class="oj-lg-2 oj-md-2 oj-flex-item">
-                    <span style="color : #ffffff">Hire Status</span>
+                    <span>Hire Status</span>
                 </div>
             </div>
             <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
@@ -224,7 +217,7 @@
                     selectionMode: 'single',
                     currentItem: '100',
                     selection: ['100'],
-                    rootAttributes: {style: 'width:100%; height:50%; overflow:auto; margin-top: 5px'},
+                    rootAttributes: {class: 'employeeTable'},
                     scrollPolicyOptions: {fetchSize: 5}}">
             </ul>
             <div data-bind="ojComponent: {component: 'ojPagingControl',
@@ -240,7 +233,7 @@
                                     <span class="inActiveStatusCheck" data-bind="visible: status == 'Inactive-Terminated'"></span>
                                     <span class="activeStatusCheck" data-bind="visible: status == 'Active'"></span>
                                     <span class="imageOverlay"></span>
-                                    <img style="width:25px; height:25px;" data-bind="attr: {src: $parent.getPhoto($data['empId'])}"/>
+                                    <img class="empImg" data-bind="attr: {src: $parent.getPhoto($data['empId'])}"/>
                                 </div>
 
                                 <div class="oj-lg-3 oj-md-3 oj-flex-item">
