--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -22,6 +22,9 @@
 $white: #fff;
 $offWhite: #f7f8f9;
 $black: #000;
+$brightBlue: #00a8ff;
+$brightGreen: #22a451;
+$brightRed: #ff0000;
 
 //New Colors
 $darkGray: #37424C;
@@ -73,34 +76,34 @@ $lightMustard: #947100;
 
 
 //Old Colors
-$primaryLightBlue: #346fd4;
-$secondaryLightBlue: #84bbe6;
-$tertiaryLightBlue: #045fab;
-
-$primaryOrange: #EA5801;
-$secondaryOrange: #EE7934;
-$tertiaryOrange: #C74B01;
-
-$primaryGreen: #3E9850;
-$secondaryGreen: #65AD73;
-$tertiaryGreen: #358144;
-
-$primaryPurple: #4C1889;
-$secondaryPurple: #7046A1;
-$tertiaryPurple: #411475;
-
-$primaryBlueGray: #596D86;
-$secondaryBlueGray: #7A8A9E;
-$tertiaryBlueGray: #4C5D72;
-
-$primaryDarkGray:#2D3142;
-$secondaryDarkGray: #575A68;
-$tertiaryDarkGray: #262A38;
-
-$primaryLightGrayBlue: #507AA0;
-$secondaryLightGrayBlue: #6A8EAE;
-
-$tertiaryLightGreen: #446888;
+//$primaryLightBlue: #346fd4;
+//$secondaryLightBlue: #84bbe6;
+//$tertiaryLightBlue: #045fab;
+//
+//$primaryOrange: #EA5801;
+//$secondaryOrange: #EE7934;
+//$tertiaryOrange: #C74B01;
+//
+//$primaryGreen: #3E9850;
+//$secondaryGreen: #65AD73;
+//$tertiaryGreen: #358144;
+//
+//$primaryPurple: #4C1889;
+//$secondaryPurple: #7046A1;
+//$tertiaryPurple: #411475;
+//
+//$primaryBlueGray: #596D86;
+//$secondaryBlueGray: #7A8A9E;
+//$tertiaryBlueGray: #4C5D72;
+//
+//$primaryDarkGray:#2D3142;
+//$secondaryDarkGray: #575A68;
+//$tertiaryDarkGray: #262A38;
+//
+//$primaryLightGrayBlue: #507AA0;
+//$secondaryLightGrayBlue: #6A8EAE;
+//
+//$tertiaryLightGreen: #446888;
 
 $lightGrayOld: #f5f5f5;
 $lightGrayOld2: #e8eef4;
@@ -124,6 +127,11 @@ $fontFamily: 'Helvetica Neue Light', Arial, sans-serif;
 //Text
 $BodyTextColor:       $black; 
 $headerTextColor:     $white;
+
+$highlightTxtColor: $brightBlue;
+
+$clockedInStatus: $brightGreen;
+$clockedOutStatus: $brightRed;
 
 //Image Variables
 //HEADER Navigation custom icons and custom graphics
@@ -160,6 +168,8 @@ $dialogAccentHover: $offWhite;
 $dialogAccentText: $white;
 $dialogIconColor: $oliveGreen;
 $alertMsgBckColor: $lightGray2;
+
+$currentWeekHeaderArea: $lightGray2;
 
 //Off Canvas Variables
 $topOffCanvasBckg: $darkGrayOld;
@@ -201,60 +211,60 @@ $sideNavLinkBckColor:$sideNavBckColor;
 $mainAreaBckgColor: $white;
 $mainAreaBorderColor: $lightGrayOld2;
 
-$homeBckColor: $primaryLightBlue;
-$homeMobileTabBckColor: $primaryLightBlue;
-$homeMobileTabAccentColor: $secondaryLightBlue;
-$homeMainTabBckColor: $primaryLightBlue;
-$homeSubTabBckColor: $secondaryLightBlue;
-$homeTabHoverText: $primaryLightBlue;
-$homeDialogHeaderColor: $primaryLightBlue;
-$homeDialogAccentColor: $tertiaryLightBlue;
+$homeBckColor: $medBlue1;
+$homeMobileTabBckColor: $medBlue1;
+$homeMobileTabAccentColor: $medBlue2;
+$homeMainTabBckColor: $medBlue1;
+$homeSubTabBckColor: $medBlue2;
+$homeTabHoverText: $medBlue1;
+$homeDialogHeaderColor: $medBlue1;
+$homeDialogAccentColor: $lightBlue;
 
 
-$laborBckColor: $primaryOrange;
-$laborMobileTabBckColor: $primaryOrange;
-$laborMobileTabAccentColor: $secondaryOrange;
-$laborMainTabBckColor: $primaryOrange;
-$laborSubTabBckColor: $secondaryOrange;
-$laborTabHoverText: $primaryOrange;
-$laborDialogHeaderColor: $primaryOrange;
-$laborDialogAccentColor: $tertiaryOrange;
+$laborBckColor: $medBrown1;
+$laborMobileTabBckColor: $medBrown1;
+$laborMobileTabAccentColor: $medBrown2;
+$laborMainTabBckColor: $medBrown1;
+$laborSubTabBckColor: $medBrown2;
+$laborTabHoverText: $medBrown1;
+$laborDialogHeaderColor: $medBrown1;
+$laborDialogAccentColor: $lightBrown;
 
-$inventoryBckColor: $primaryGreen;
-$inventoryMobileTabBckColor: $primaryGreen;
-$inventoryMobileTabAccentColor: $secondaryGreen;
-$inventoryMainTabBckColor: $primaryGreen;
-$inventorySubTabBckColor: $secondaryGreen;
-$inventoryTabHoverText: $primaryGreen;
-$inventoryDialogHeaderColor: $primaryGreen;
-$inventoryDialogAccentColor: $tertiaryGreen;
+$inventoryBckColor: $medViolet1;
+$inventoryMobileTabBckColor: $medViolet1;
+$inventoryMobileTabAccentColor: $medViolet2;
+$inventoryMainTabBckColor: $medViolet1;
+$inventorySubTabBckColor: $medViolet2;
+$inventoryTabHoverText: $medViolet1;
+$inventoryDialogHeaderColor: $medViolet1;
+$inventoryDialogAccentColor: $lightViolet;
 
-$giftLoyaltyBckColor: $primaryPurple;
-$giftLoyaltyMobileTabBckColor: $primaryPurple;
-$giftLoyaltyMobileTabAccentColor: $secondaryPurple;
-$giftLoyaltyMainTabBckColor: $primaryPurple;
-$giftLoyaltySubTabBckColor: $secondaryPurple;
-$giftLoyaltyTabHoverText: $primaryPurple;
-$giftLoyaltyDialogHeaderColor: $primaryPurple;
-$giftLoyaltyDialogAccentColor: $tertiaryPurple;
+$giftLoyaltyBckColor: $medPurple1;
+$giftLoyaltyMobileTabBckColor: $medPurple1;
+$giftLoyaltyMobileTabAccentColor: $medPurple2;
+$giftLoyaltyMainTabBckColor: $medPurple1;
+$giftLoyaltySubTabBckColor: $medPurple2;
+$giftLoyaltyTabHoverText: $medPurple1;
+$giftLoyaltyDialogHeaderColor: $medPurple1;
+$giftLoyaltyDialogAccentColor: $lightPurple;
 
-$reportsAnalyticsBckColor: $primaryBlueGray;
-$reportsAnalyticsMobileTabBckColor: $primaryBlueGray;
-$reportsAnalyticsMobileTabAccentColor: $secondaryBlueGray;
-$reportsAnalyticsMainTabBckColor: $primaryBlueGray;
-$reportsAnalyticsSubTabBckColor: $secondaryBlueGray;
-$reportsAnalyticsTabHoverText: $primaryBlueGray;
-$reportsAnalyticsDialogHeaderColor: $primaryBlueGray;
-$reportsAnalyticsDialogAccentColor: $tertiaryBlueGray;
+$reportsAnalyticsBckColor: $medGreen1;
+$reportsAnalyticsMobileTabBckColor: $medGreen1;
+$reportsAnalyticsMobileTabAccentColor: $medGreen2;
+$reportsAnalyticsMainTabBckColor: $medGreen1;
+$reportsAnalyticsSubTabBckColor: $medGreen2;
+$reportsAnalyticsTabHoverText: $medGreen1;
+$reportsAnalyticsDialogHeaderColor: $medGreen1;
+$reportsAnalyticsDialogAccentColor: $lightGreen;
 
-$enterpriseBckColor: $primaryDarkGray;
-$enterpriseMobileTabBckColor: $primaryDarkGray;
-$enterpriseMobileTabAccentColor: $secondaryDarkGray;
-$enterpriseMainTabBckColor: $primaryDarkGray;
-$enterpriseSubTabBckColor: $secondaryDarkGray;
-$enterpriseTabHoverText: $primaryDarkGray;
-$enterpriseDialogHeaderColor: $primaryDarkGray;
-$enterpriseDialogAccentColor: $tertiaryDarkGray;
+$enterpriseBckColor: $medRed1;
+$enterpriseMobileTabBckColor: $medRed1;
+$enterpriseMobileTabAccentColor: $medRed2;
+$enterpriseMainTabBckColor: $medRed1;
+$enterpriseSubTabBckColor: $medRed2;
+$enterpriseTabHoverText: $medRed1;
+$enterpriseDialogHeaderColor: $medRed1;
+$enterpriseDialogAccentColor: $lightRed;
 
 $peopleBckColor: $medGrayBlue1;
 $peopleMobileTabBckColor: $medGrayBlue1;
@@ -263,7 +273,7 @@ $peopleMainTabBckColor: $medGrayBlue1;
 $peopleSubTabBckColor: $lightGrayBlue;
 $peopleTabHoverText: $medGrayBlue1;
 $peopleDialogHeaderColor: $medGrayBlue1;
-$peopleDialogAccentColor: $tertiaryLightGreen;
+$peopleDialogAccentColor: $lightGrayBlue;
 
 //Employee Search
 $searchTitleBarBckg: $lightGray2;
@@ -300,6 +310,9 @@ a{
     cursor: pointer;
 }
 
+.txtHighlight{
+    color: $highlightTxtColor;
+}
 //General Header Tags
 h1, h2{
     font-family: 'Helvetica Neue Light';
@@ -742,6 +755,62 @@ html:not([dir="rtl"]) .oj-dialog-title{
 .searchTitle{
     h2{
          color:$black;
+    }
+}
+
+#empBasicDialogWindow {
+    label{
+        font-weight:bold;
+        text-transform: uppercase;
+        &.subLabel{
+            text-transform: capitalize;
+        }
+        &.empStatus{
+            text-transform: capitalize;
+            margin-bottom: 10px;
+            display: inline-block;
+            &.clockedIn{
+                color: $clockedInStatus;
+                &::before{
+                    height:10px;
+                    width:10px;
+                    background-color:$clockedInStatus;
+                    content:'';
+                    display:inline-block;
+                    margin-right: 5px;
+                }
+            }
+            &.clockedOut{
+                color: $clockedOutStatus;
+                 &::before{
+                    height:10px;
+                    width:10px;
+                    background-color:$clockedOutStatus;
+                    content:'';
+                    display:inline-block;
+                    margin-right: 5px;
+                }
+            }
+        }
+    }
+    .oj-flex-item:not(:last-child){
+        margin:0 20px 10px 0;
+    }
+    .oj-flex-item{
+        &.currentWeekHeaderArea{
+            margin:0;
+            background-color: $currentWeekHeaderArea;
+            .currentWeekHeader{
+                color: $BodyTextColor;
+            }
+        }
+        &.currentWeekHeader{
+            margin:0;
+        }
+    }
+    .currentWeekHeader{
+        padding:10px;
+        color: $white;
     }
 }
 //.searchWindow{
